package com.example.unittestsdemo.amiibo

data class Amiibo(
    val name: String,
    val image: String,
)
